--- a/7j/frontend/src/components/ChatApp.css
+++ b/7j/frontend/src/components/ChatApp.css
@@ -89,13 +89,16 @@ body {
     transition: transform 0.2s ease;
   }
 
-
+.btheader{
+  width: 10%;
+  height: 36px;
+}
 
 
   .app-header {
-    background-color: #f4f4f4;
+    background-color:transparent;
     padding: 20px;
-    text-align: center;
+   
     position: fixed;
     top: 0;
     width: 100%;
