--- a/7j/frontend/src/components/ChatApp.css
+++ b/7j/frontend/src/components/ChatApp.css
@@ -8,20 +8,6 @@ body {
     margin: 0;
     gap: 10px;
   }
-  .video-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1; /* Ensure it stays behind the content */
-    overflow: hidden;
-  }
-  .video-background video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensures the video fills the screen */
-  }
   
   
   .text-token-text-tertiary {
@@ -135,9 +121,10 @@ body {
   text-transform: none;
   background-color: transparent;
   background-image: none;
-  
+  font-family: system-ui;
   border: 0 solid #e3e3e3;
   box-sizing: border-box;
+  font-weight: bold;
 
   
 }
