--- a/7j/frontend/src/components/ChatApp.css
+++ b/7j/frontend/src/components/ChatApp.css
@@ -72,6 +72,18 @@ body {
 
    
   }
+  .somber{
+    width: 15px; 
+    height: 15px;
+    text-align: center;
+    padding: 0px 5px;
+    
+  }
+  .bt:hover {
+    background-color: #c7c7c7; /* Slightly lighter background */
+    box-shadow: 0 0 15px rgba(197, 197, 197, 0.8); /* Glowing white light */
+    color: #fff; /* Maintain text color */
+  }
   
   .send-button:hover {
     transform: scale(1.1); 
