--- a/7j/frontend/src/components/ChatApp.css
+++ b/7j/frontend/src/components/ChatApp.css
@@ -22,28 +22,30 @@ body {
     stroke-width: 1.5;
     flex-shrink: 0;
   }
+
   * {
     scrollbar-color: var(--main-surface-tertiary) transparent;
   }
   .chat-container {
     width: 900px;
     max-height: 580px;
+    
     background-color: transparent; /* Slightly transparent white */
     padding: 80px 20px 50px; 
     border-radius: 8px;
-   
     box-shadow: 0 0 10px rgba(2, 2, 2, 0.1);
     text-align: center;
     margin: 10px;
-    
     backdrop-filter: blur(2px); /* Apply blur effect */
     -webkit-backdrop-filter: blur(10px); /* Safari compatibility */
     box-shadow: 0 0 15px rgba(147, 147, 147, 0.8); 
+    
   }
   
   
   
   .user-message {
+    
     background-color:transparent;
     padding: 5px;
     margin: 5px 0;
@@ -64,7 +66,7 @@ body {
     background-color: transparent;
     width: calc(100% - 90px);
     padding: 10px;
-    border: 1px solid #808080;
+    border: 1px solid #4d4c4c;
     border-radius: 4px;
     margin: 10px;
     color: inherit;
